force-app/main/default/objects/Account_Team_Role__c/Account_Team_Role__c.object-meta.xml
<CustomObject>
    <label>Account Team Role</label>
    <nameField>
        <displayFormat>ATR-{00000}</displayFormat>
        <label>Account Team Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>