force-app/main/default/objects/Account_Team_Role__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team Roles</relationshipLabel>
    <relationshipName>Account_Team_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>