force-app/main/default/objects/Account_Team_Role__c/fields/JDE_External_Id__c.field-meta.xml
<CustomField>
    <fullName>JDE_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>JDE External Id</label>
    <length>125</length>
    <type>Text</type>
</CustomField>