force-app/main/default/objects/Account_Team_Role__c/fields/JDE_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>JDE_Record_Type__c</fullName>
    <label>JDE Record Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>