force-app/main/default/objects/Account_Team_Role__c/fields/Level_1_code__c.field-meta.xml
<CustomField>
    <fullName>Level_1_code__c</fullName>
    <label>Level 1 code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>