force-app/main/default/objects/Account_Team_Role__c/fields/Level_2_Code__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Code__c</fullName>
    <label>Level 2 Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>