force-app/main/default/objects/Account_Team_Role__c/fields/Level_3_Code__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Code__c</fullName>
    <label>Level 3 Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>