force-app/main/default/objects/Account_Team_Role__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>ACD</fullName>
            </value>
            <value>
                <fullName>ITSE</fullName>
            </value>
            <value>
                <fullName>ARC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>