force-app/main/default/objects/Account_Team_Role__c/fields/Position_Description__c.field-meta.xml
<CustomField>
    <fullName>Position_Description__c</fullName>
    <label>Position Description</label>
    <type>TextArea</type>
</CustomField>