force-app/main/default/objects/Account_Team_Role__c/fields/Structure_Description__c.field-meta.xml
<CustomField>
    <fullName>Structure_Description__c</fullName>
    <label>Structure Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>